--- a/resume.tex
+++ b/resume.tex
@@ -43,8 +43,8 @@
 \addtolength{\oddsidemargin}{-0.5in}
 \addtolength{\evensidemargin}{-0.5in}
 \addtolength{\textwidth}{1in}
-\addtolength{\topmargin}{-.5in}
-\addtolength{\textheight}{1.0in}
+\addtolength{\topmargin}{-.6in}
+\addtolength{\textheight}{1.15in}
 
 \urlstyle{same}
 
@@ -112,23 +112,25 @@
 % \end{tabular*}
 
 \begin{center}
-    \textbf{\Huge \scshape Jake Ryan} \\ \vspace{1pt}
-    \small 123-456-7890 $|$ \href{mailto:x@x.com}{\underline{jake@su.edu}} $|$ 
-    \href{https://linkedin.com/in/...}{\underline{linkedin.com/in/jake}} $|$
-    \href{https://github.com/...}{\underline{github.com/jake}}
+  \textbf{\Huge \scshape Nekruz Ashrapov} \\ \vspace{1pt}
+  \small +1 (929) 554-0055 $|$ \href{mailto:ashrapnz@mail.uc.edu}{\underline{ashrapnz@mail.uc.edu}} $|$ 
+  \href{https://www.linkedin.com/in/nekruzash/}{\underline{linkedin.com/in/nekruzash}} $|$
+  \href{https://github.com/NekruzAsh}{\underline{github.com/nekruzash}} $|$
+  \href{https://nashrapov.com/}{\underline{nashrapov.com}}
 \end{center}
 
 
 %-----------EDUCATION-----------
 \section{Education}
-  \resumeSubHeadingListStart
-    \resumeSubheading
-      {Southwestern University}{Georgetown, TX}
-      {Bachelor of Arts in Computer Science, Minor in Business}{Aug. 2018 -- May 2021}
-    \resumeSubheading
-      {Blinn College}{Bryan, TX}
-      {Associate's in Liberal Arts}{Aug. 2014 -- May 2018}
-  \resumeSubHeadingListEnd
+\resumeSubHeadingListStart
+  \resumeSubheading
+    {University of Cincinnati}{Expected Graduation: May 2027}
+    {Bachelor of Science in Computer Science, Minor in Mathematics}{GPA: 3.31} \\
+    \resumeItem{\hspace{4mm}\textbf{ - Relevant Coursework}: Programming Languages, Discrete Structures, Data Structures, Computer Systems}
+    \vspace{-5pt}
+    \resumeItem{\hspace{4mm}\textbf{ - Organizations}: UC IEEE, UC Cryptocurrency Club, MakeUC, ACM@UC, UC AI Society, Cyber@UC}
+    
+\resumeSubHeadingListEnd
 
 
 %-----------EXPERIENCE-----------
@@ -136,12 +138,12 @@
   \resumeSubHeadingListStart
 
     \resumeSubheading
-      {Undergraduate Research Assistant}{June 2020 -- Present}
-      {Texas A\&M University}{College Station, TX}
+      {Research Assistant}{August 2024 -- Present}
+      {\href{https://business.uc.edu/about/centers-partnerships/kautz-uible-economics-institute/initiatives/kautz-uible-cryptoeconomics-lab.html}{Kautz-Uible Economics Institute}}{Cincinnati, OH}
       \resumeItemListStart
-        \resumeItem{Developed a REST API using FastAPI and PostgreSQL to store data from learning management systems}
-        \resumeItem{Developed a full-stack web application using Flask, React, PostgreSQL and Docker to analyze GitHub data}
-        \resumeItem{Explored ways to visualize GitHub collaboration in a classroom setting}
+        \resumeItem{Analyzed blockchain data for \textbf{107+} members, contributing to a reputation-based voting system used in elections}
+        \resumeItem{Implemented crypto-economic principles in a blockchain governance model, advancing research efficiency by \textbf{5\%}}
+        \resumeItem{Architected \textbf{6} smart contracts to automate voting rights allocation, reducing administrative work by \textbf{14\%}}
       \resumeItemListEnd
       
 % -----------Multiple Positions Heading-----------
@@ -155,63 +157,92 @@
 %-------------------------------------------
 
     \resumeSubheading
-      {Information Technology Support Specialist}{Sep. 2018 -- Present}
-      {Southwestern University}{Georgetown, TX}
+      {Software Engineer Intern}{July 2024 -- September 2024}
+      {\href{https://headstarter.co/}{Headstarter (Startup)}}{Long Island City, NY}
       \resumeItemListStart
-        \resumeItem{Communicate with managers to set up campus computers used on campus}
-        \resumeItem{Assess and troubleshoot computer problems brought by students, faculty and staff}
-        \resumeItem{Maintain upkeep of computers, classroom equipment, and 200 printers across campus}
+        \resumeItem{Specialized in training large LLMs with IBM WatsonX, yielding a \textbf{21\%} improvement in model accuracy }
+        \resumeItem{Collaborated in a team of \textbf{4} to craft and ship a product to more than \textbf{1500} users and securing \textbf{+\$1000}}
+        \resumeItem{Leveraged Next.js, TypeScript, and OpenAI to assemble an AI-powered web application with agile development}
     \resumeItemListEnd
 
     \resumeSubheading
-      {Artificial Intelligence Research Assistant}{May 2019 -- July 2019}
-      {Southwestern University}{Georgetown, TX}
+      {Math Tutor}{May 2024 -- September 2024}
+      {\href{https://www.uc.edu/}{University of Cincinnati}}{Cincinnati, OH}
       \resumeItemListStart
-        \resumeItem{Explored methods to generate video game dungeons based off of \emph{The Legend of Zelda}}
-        \resumeItem{Developed a game in Java to test the generated dungeons}
-        \resumeItem{Contributed 50K+ lines of code to an established codebase via Git}
-        \resumeItem{Conducted  a human subject study to determine which video game dungeon generation technique is enjoyable}
-        \resumeItem{Wrote an 8-page paper and gave multiple presentations on-campus}
-        \resumeItem{Presented virtually to the World Conference on Computational Intelligence}
-      \resumeItemListEnd
+      \resumeItem{Advised over \textbf{9} elementary school foreign students in reading and math, championing diversity and inclusion}
+        \resumeItem{Tailored \textbf{14} lesson plans to address individual learning needs, resulting in a \textbf{23\%} increase in quiz scores}
+        \resumeItem{Interpreted school documents and communications, augmenting accessibility for parents and community}
+        \resumeItemListEnd
 
+    \resumeSubheading
+      {Software Engineer Intern}{June 2024 -- July 2024}
+      {\href{https://www.jpmorganchase.com/}{JPMorganChase (Early Internship Program)}}{Columbus, OH}
+      \resumeItemListStart
+        \resumeItem{Engineered an inclusive registration platform using Java, embedding accessibility features for diverse users}
+        \resumeItem{Designed a user interface using React.js and TypeScript, culminating in a \textbf{6\%} enhancement in cybersecurity}
+        \resumeItem{Directed CI/CD practices by communicating progress to \textbf{7} stakeholders, improving overall software quality}
+        \resumeItem{Deployed applications to Infrastructure Net using Kubernetes and Docker, reducing incidents by \textbf{11\%}}
+      \resumeItemListEnd
   \resumeSubHeadingListEnd
 
+  
+     
 
 %-----------PROJECTS-----------
 \section{Projects}
     \resumeSubHeadingListStart
       \resumeProjectHeading
-          {\textbf{Gitlytics} $|$ \emph{Python, Flask, React, PostgreSQL, Docker}}{June 2020 -- Present}
+          {\href{https://chatbot-ai-indol-five.vercel.app/}{\textbf{Chatbot AI}} $|$ \emph{TypeScript, React.js, OpenAI, Next.js, Tailwind, AWS EC2}}{April 2024 -- September 2024}
           \resumeItemListStart
-            \resumeItem{Developed a full-stack web application using with Flask serving a REST API with React as the frontend}
-            \resumeItem{Implemented GitHub OAuth to get data from user’s repositories}
-            \resumeItem{Visualized GitHub data to show collaboration}
-            \resumeItem{Used Celery and Redis for asynchronous tasks}
+            \resumeItem{Accomplished a \textbf{95\%} \vspace{-1.2em} increase in deployment efficiency for a multi-level AI chatbot application on AWS EC2 servers}
+            \resumeItem{Elevated user satisfaction by \textbf{8\%} through the integration of a real-time feedback mechanism algorithm}
           \resumeItemListEnd
       \resumeProjectHeading
-          {\textbf{Simple Paintball} $|$ \emph{Spigot API, Java, Maven, TravisCI, Git}}{May 2018 -- May 2020}
+          {\href{https://inventory-management-app-gold.vercel.app/}{\textbf{Inventory Management}} $|$ \emph{JavaScript, React.js, Firebase, Next.js, Tailwind}}{February 2024 -- August 2024}
           \resumeItemListStart
-            \resumeItem{Developed a Minecraft server plugin to entertain kids during free time for a previous job}
-            \resumeItem{Published plugin to websites gaining 2K+ downloads and an average 4.5/5-star review}
-            \resumeItem{Implemented continuous delivery using TravisCI to build the plugin upon new a release}
-            \resumeItem{Collaborated with Minecraft server administrators to suggest features and get feedback about the plugin}
+            \resumeItem{Executed real-time inventory management to handle over \textbf{112} item transactions, including searching functionalities}
+            \resumeItem{Crafted an accessible user interface, enhancing accessibility by \textbf{21\%} for individuals with diverse abilities}
+          \resumeItemListEnd
+        \resumeProjectHeading
+          {\href{https://github.com/NekruzAsh/BreakfastApp}{\textbf{Health Tracker}} $|$ \emph{C++, Flutter, Dart, Swift, iTerm2, iOS }}{April 2024 -- May 2024}
+          \resumeItemListStart
+            \resumeItem{Formulated tools to track calorie intake of \textbf{+64} nutritious foods, generating insights to support nutrition plans}
+            \resumeItem{Empowered users to achieve a \textbf{10\%} improvement in their wellness goals through a recommendation algorithm}
           \resumeItemListEnd
     \resumeSubHeadingListEnd
 
+%-----------Extracurricular/LEADERSHIP-----------
+\section{Leadership \& Extracurriculars}
+  \resumeSubHeadingListStart
+      \resumeProjectHeading
+          {\textbf{Lead Web Developer} $|$ \emph{UC IEEE}}{April 2024 -- Present}
+          \resumeItemListStart
+            \resumeItem{Developed a Next.js web application with a new Research Journal section connecting \textbf{4} departments}
+          \resumeItemListEnd
+        \resumeProjectHeading
+          {\textbf{Tech Team Lead} $|$ \emph{MakeUC (Hackathon)}}{May 2024 -- Present}
+          \resumeItemListStart
+            \resumeItem{Led a team of \textbf{5} developers, coordinating tasks to meet project milestones acquiring over \textbf{210} participants}
+        \resumeItemListEnd
+    \resumeSubHeadingListEnd
 
 
-%
 %-----------PROGRAMMING SKILLS-----------
 \section{Technical Skills}
  \begin{itemize}[leftmargin=0.15in, label={}]
     \small{\item{
-     \textbf{Languages}{: Java, Python, C/C++, SQL (Postgres), JavaScript, HTML/CSS, R} \\
-     \textbf{Frameworks}{: React, Node.js, Flask, JUnit, WordPress, Material-UI, FastAPI} \\
-     \textbf{Developer Tools}{: Git, Docker, TravisCI, Google Cloud Platform, VS Code, Visual Studio, PyCharm, IntelliJ, Eclipse} \\
-     \textbf{Libraries}{: pandas, NumPy, Matplotlib}
+     \textbf{Programming Languages}{: Python, Java, C++, JavaScript/TypeScript, HTML/CSS, Solidity, MATLAB, Haskell} \\
+     \textbf{Frameworks}{: Next.js, Tailwind, Sass, React.js, Node.js, Ethers.js, Flutter, Swift, Apache Maven, Spring Boot} \\
+     \textbf{Tools \& Platforms}{: Jira, Git, GitHub, Firebase, Heroku, Vercel, MongoDB, Kubernetes, Docker, AWS EC2, S3}
     }}
  \end{itemize}
+
+%----Footer-------
+
+ \begin{center}
+  \textbf{Available Spring 2025, Fall 2025, Summer 2026}
+\end{center}
+
 
 
 %-------------------------------------------
